# pyrolyze

./: .gitignore  AGENTS.md  README.md  TODOS.md  TODOS_DONE.md  pyproject.toml
Studio/: Pyrolyze_As_Is_Findings.md  README.md  Studio App Spec Baseline.md  Studio_Directory_Structure.md  Studio_System_Design_Document.md  Studio_System_Requirements.md  __init__.py  run_studio.py  run_studio_poc.py  studio_logic.py  studio_poc.py
dev-docs/: ApiDesignRules.md  CodeJanitorReport.md  ContainerStyleGeneratorRequirements.md  DearPyGuiAiRecommendedOopWrapper.md  DpgPytoPlan.md  DpyPyroDesign.mb  GenericApiGenerator.md  GenericReconciler.md  GenericReconcilerApiProposal.md  GenericReconcilerRequirements.md  HierarchicalAppContextDocPlan.md  HierarchicalContextManagement.md  HierarchicalContextManagementPlan.md  ImportHookFix.md  MountAdvertsDagBuilder.md  MountDocPlan.md  MountExtendedTestCases.md  MountKeys.md  MountMedusaDesign.md  MountPointComponentDesign.md  MountSpecImplementationPlan.md  MountableSpecModel.md  MountableTestingPlan.md  PackageStructureRules.md  PerfResgressionTkinterAnalysis.md  PySide6StudioClassSupportPlan.md  PyrolyzeDearImGui.md  PyrolyzeDearPyGuiTodos.md  ReactiveRootWindowProxy.md  ReferenceShellLayout.md  SemanticUiLibraryDesignRules.md  StudioAppRecreation.md  TkinterUiLibraryImplementationPlan.md  UIKitPyrolizeFeasibility.md  UiWidgetSpecModel.md  UnifiedComplete.md  UnifiedMountBasedNativeApi.md  WidgetReconcilePlan.md
docs/: DocumentationPlan.md  README.md
examples/: dearpygui_demo_trees.py  grid_app.py  grid_app_dearpygui.py  grid_app_pyside6.py  grid_app_tkinter.py  grid_app_unified.py  run_dpg_host_smoke.py  run_grid_app.py  run_grid_app_dearpygui.py  run_grid_app_dearpygui_pyrolyze.py  run_grid_app_pyside6.py  run_grid_app_tkinter.py  run_grid_app_unified.py  run_unified_hello_pyside6.py  studio_app.py  unified_hello_pyside6.py
pyrolyze_tools/: __init__.py  dearpygui_emit_library.py  dearpygui_spec_reference_docs.py  generate_dearpygui_library.py  generate_hydo_library.py  generate_semantic_library.py  ui_library_reference_docs.py
tests/: README.md  (+87 more)
(+278 files in other folders)
