[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrolyze"
version = "0.0.0"
description = "PyRolyze compiler/runtime reboot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7,<7",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
