[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrolyze"
version = "0.0.0"
description = "PyRolyze compiler/runtime reboot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dearpygui>=2.0,<3",
  "frozendict>=2,<3",
  "PySide6>=6.7,<7",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
]

[project.scripts]
pyrolyze-install-import-hook = "pyrolyze.compiler.import_hook_cli:main"
pyrolyze-import-hook-pth = "pyrolyze.pyrolyze_tools.import_hook_pth:main_cli"

[project.entry-points.pytest11]
pyrolyze = "pyrolyze.compiler.pytest_plugin"

[tool.pyrolyze.test-matrix]
python = ["3.12", "3.13", "3.14", "3.15"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
